metido caso de uso de añadir

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=spring-boot-jpa-api-rest-clean-architecture
+# ===============================
+# CONFIGURACIÓN DE H2
+# ===============================
+
+# URL de la base de datos H2 en memoria
+spring.datasource.url=jdbc:h2:mem:productosdb
+
+# Driver de H2
+spring.datasource.driverClassName=org.h2.Driver
+
+# Credenciales por defecto (opcional)
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Dialecto de Hibernate para H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Crear automáticamente las tablas a partir de las entidades JPA
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar las queries SQL en la consola
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Activar la consola web de H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
