metidos ejemplos de uso de pruebas asociadas al código :)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=spring-boot-jpa-api-rest-clean-architecture
 # ===============================
-# CONFIGURACIÓN DE H2
+# CONFIGURACION DE H2
 # ===============================
 
 # URL de la base de datos H2 en memoria
@@ -16,7 +16,7 @@ spring.datasource.password=
 # Dialecto de Hibernate para H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Crear automáticamente las tablas a partir de las entidades JPA
+# Crear automaticamente las tablas a partir de las entidades JPA
 spring.jpa.hibernate.ddl-auto=update
 
 # Mostrar las queries SQL en la consola
