--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,28 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-		<junit.jupiter.version>5.13.4</junit.jupiter.version>
-		<junit.platform.version>1.13.4</junit.platform.version>
-		<cucumber.version>7.18.1</cucumber.version>
+		<junit.jupiter.version>5.13.3</junit.jupiter.version>
+		<junit.platform.version>1.13.3</junit.platform.version>
+		<cucumber.version>7.28.2</cucumber.version>
 	</properties>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>${junit.jupiter.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.cucumber</groupId>
+				<artifactId>cucumber-bom</artifactId>
+				<version>${cucumber.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -85,20 +103,17 @@
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit-platform-engine</artifactId>
-			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- Opcional, para DI sencillo -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-picocontainer</artifactId>
-			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
 
