metida funcionalidad de llamada a un servicio rest, incluidas pruebas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # Activar la consola web de H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+app.productos.base-url=http://localhost:8080
